--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="images/slider/bike1.png" class="w-auto" />
+                        <img src="./images/slider/bike1.png" class="w-auto" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -107,7 +107,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike2.png" class="w-auto" />
+                        <img src="./images/slider/bike2.png" class="w-auto" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -127,7 +127,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike3.png" class="w-auto" />
+                        <img src="./images/slider/bike3.png" class="w-auto" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -146,7 +146,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike4.png" class="w-auto" />
+                        <img src="./images/slider/bike4.png" class="w-auto" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -167,7 +167,7 @@
             <div class="grid  gap-4 grid-cols-1 md:grid-cols-2 p-5 lg:grid-cols-3 p-4 lg:p-20">
             <!-- first card -->
             <div class="card bg-base-100 shadow-xl">
-                <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
                 <div class="card-body">
                     <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
@@ -179,7 +179,7 @@
             </div>
             <!-- second card -->
             <div class="card  bg-base-100 shadow-xl">
-                <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                 <div class="card-body">
                     <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
@@ -191,7 +191,7 @@
             </div>
             <!-- third card -->
             <div class="card   bg-base-100 shadow-xl">
-                <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
                 <div class="card-body">
                     <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
@@ -211,7 +211,7 @@
                 <!-- first review -->
                 <div class="card  bg-base-100 p-9 border border-gray-400">
                     <figure class="px-10 pt-10">
-                      <img class="w-36" src="/images/others/user-1.png" alt="Shoes" class="rounded-xl" />
+                      <img class="w-36" src="./images/others/user-1.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
                       <p>Slate helps you see how 
@@ -234,7 +234,7 @@
                    <!-- second review -->
                 <div class="card  bg-base-100 p-9 border border-gray-400">
                     <figure class="px-10 pt-10">
-                      <img class="w-36" src="/images/others/user-2.png" alt="Shoes" class="rounded-xl" />
+                      <img class="w-36" src="./images/others/user-2.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
                       <p>Slate helps you see how 
@@ -257,7 +257,7 @@
                    <!-- Third review -->
                 <div class="card  bg-base-100 p-9 border border-gray-400">
                     <figure class="px-10 pt-10">
-                      <img class="w-36" src="/images/others/user-3.png" alt="Shoes" class="rounded-xl" />
+                      <img class="w-36" src="./images/others/user-3.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
                       <p>Slate helps you see how 
@@ -285,7 +285,7 @@
             <h2 class="text-2xl lg:text-5xl font-bold text-center mb-15 mb-24">Frequently Asked <span class="text-bike-primary">Questions</span></h2>
             <div class="hero  ">
                 <div class="hero-content flex-col lg:flex-row gap-24">
-                  <img src="/images/others/faq.png" class=" w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                  <img src="./images/others/faq.png" class=" w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
                   <div>
                     <div class="collapse collapse-arrow ">
                         <input type="radio" name="my-accordion-2" checked="checked" /> 
